Porting of previous work
Onramp - Add key/value for road-roller roads